fix overfull hbox in 1.5 intro

--- a/mo.tex
+++ b/mo.tex
@@ -717,7 +717,7 @@ At the other extreme, we can pick the extremely nondegenerate case \(X = \S\), w
 
 \section{The unoriented bordism ring}\label{PiStarMOSection}
 
-Our goal in this section is to use our results so far to make a calculation of \(\pi_* MO\), the unoriented bordism ring.  Our approach is the same as in the examples at the end of the previous section: we will want to use the Adams spectral sequence of signature \[H^*_{\mathrm{gp}}(\InternalAut_1(\G_a); \HFtwo P_0(MO)\widetilde{\:}) \Rightarrow \pi_* MO,\] where \(\HFtwo P_0(MO)\widetilde{\:}\) denotes the associated quasicoherent sheaf over \(\Spec k \mmod \Spec A_*\) as in \Cref{TrustMeAboutQCoh}---and we will therefore want to understand \(\HFtwo P_0(MO)\) as a comodule for the dual Steenrod algebra.
+Our goal in this section is to use our results so far to make a calculation of \(\pi_* MO\), the unoriented bordism ring.  Our approach is the same as in the examples at the end of the previous section: we will want to use the Adams spectral sequence \[H^*_{\mathrm{gp}}(\InternalAut_1(\G_a); \HFtwo P_0(MO)\widetilde{\:}) \Rightarrow \pi_* MO,\] where \(\HFtwo P_0(MO)\widetilde{\:}\) denotes the quasicoherent sheaf over \(\Spec \F_2 \mmod \Spec \mathcal AP_0\), as in \Cref{TrustMeAboutQCoh}.  We will therefore want to understand \(\HFtwo P_0(MO)\) as a comodule for the dual Steenrod algebra.
 
 Our first step toward this is the following calculation:
 \begin{lemma}[{\cite[Theorem 16.17]{Switzer}}]\label{HF2BOIsSymAlg}
