--- a/quillen.tex
+++ b/quillen.tex
@@ -106,7 +106,7 @@ Fix a scheme \(S\).  A \index{formal scheme}\textit{formal \(S\)--scheme} \(X = 
 Although we will make use of these definitions generally, the following ur-example captures the most geometrically-intuitive situation.
 
 \begin{example}\label{MapsOfFVarsArePowerSeries}
-Picking the affine scheme \(X = \Spec R[x_1, \ldots, x_n] = \mathbb A^n\) and the point \(s = (x_1 = 0, \ldots, x_n = 0)\) gives a formal scheme known as \index{formal scheme!affine n space@affine \(n\)--space}\textit{formal affine \(n\)--space}, given explicitly by \[\A^n = \Spf R\llbracket x_1, \ldots, x_n\rrbracket.\]  Evaluated on a test algebra \(T\), \(\A^1(T)\) yields the ideal of nilpotent elements in \(T\) and \(\A^n(T)\) its \(n\)--fold Cartesian power.  Pointed maps \(\A^n \to \A^m\) naturally biject with \(m\)--tuples of \(n\)--variate power series with no constant term.\footnote{In some sense, this Lemma is a full explanation for why anyone would even think to involve formal geometry in algebraic topology (nevermind how useful the program has been in the long run).  Calculations in algebraic topology have long been expressed in terms of power series rings, and with this Lemma we are provided geometric interpretations for such statements.}
+Picking the affine scheme \(X = \Spec R[x_1, \ldots, x_n] = \mathbb A^n\) and the point \(s = (x_1 = 0, \ldots, x_n = 0)\) gives a formal scheme known as \index{formal scheme!affine n space@affine \(n\)--space}\textit{formal affine \(n\)--space}, given explicitly by \[\A^n = \Spf R\llbracket x_1, \ldots, x_n\rrbracket.\]  Evaluated on a test algebra \(T\), \(\A^1(T)\) yields the ideal of nilpotent elements in \(T\) and \(\A^n(T)\) its \(n\)--fold Cartesian power.  Pointed maps \(\A^n \to \A^m\) naturally biject with \(m\)--tuples of \(n\)--variate power series with no constant term.\footnote{In some sense, this example is a full explanation for why anyone would even think to involve formal geometry in algebraic topology (nevermind how useful the program has been in the long run).  Calculations in algebraic topology have long been expressed in terms of power series rings, and with this example we are provided geometric interpretations for such statements.}
 \end{example}
 
 Part of the point of the geometric language is to divorce abstract rings (e.g., \(E^0 \CP^\infty\)) from concrete presentations (e.g., \(E^0\ps{x}\)), so we additionally reserve some vocabulary for the property of being isomorphic to \(\A^n\):
