fix \in vs \subset when speaking of primes

--- a/quillen.tex
+++ b/quillen.tex
@@ -224,7 +224,7 @@ x_1(t_1) +_{\Gm} x_2(t_2) & = 1 - (1 - t_1)(1 - t_2) \\
 \end{align*}
 \end{example}
 
-As an application of all these tools, we will show that the \emph{rational} theory of formal groups is highly degenerate: every rational formal group admits a \index{logarithm}\textit{logarithm}, i.e., an isomorphism to \(\G_a\).  Suppose now that \(R\) is a \(\Q\)--algebra and that \(A = R\llbracket x \rrbracket\) is the coordinatized ring of functions on a formal line over \(R\).  What's special about this rational curve case is that differentiation gives an isomorphism between the \index{Kahler differentials@K\"ahler differentials}K\"ahler differentials \(\Omega^1_{A/R}\) and the ideal \((x)\) of functions vanishing at the origin (i.e., the ideal sheaf selecting the closed subscheme \(0\co \Spec R \to \Spf A\)).  Its inverse is formal integration: \[\int \co \left(\sum_{j=0}^\infty c_j x^j \right) \dx \mapsto \sum_{j=0}^\infty \frac{c_j}{j+1} x^{j+1}.\]  In pursuit of the construction of a logarithm for a formal group \(\G\) over \(R\), we now take a cue from classical Lie theory:
+As an application of all these tools, we will show that the \emph{rational} theory of formal groups is highly degenerate: every rational formal group admits a \index{logarithm}\textit{logarithm}, i.e., an isomorphism to \(\G_a\).  Suppose now that \(R\) is a \(\Q\)--algebra and that \(A = R\llbracket x \rrbracket\) is the coordinatized ring of functions on a formal line over \(R\).  The special feature of the rational curve case is that differentiation gives an isomorphism between the \index{Kahler differentials@K\"ahler differentials}K\"ahler differentials \(\Omega^1_{A/R}\) and the ideal \((x)\) of functions vanishing at the origin (i.e., the ideal sheaf selecting the closed subscheme \(0\co \Spec R \to \Spf A\)).  Its inverse is formal integration: \[\int \co \left(\sum_{j=0}^\infty c_j x^j \right) \dx \mapsto \sum_{j=0}^\infty \frac{c_j}{j+1} x^{j+1}.\]  In pursuit of the construction of a logarithm for a formal group \(\G\) over \(R\), we now take a cue from classical Lie theory:
 \begin{definition}
 A \(1\)--form \(\omega \in \Omega^1_{A/R}\) is said to be \index{Kahler differentials@K\"ahler differentials!invariant}\textit{invariant (under a group law \(+_\phi\))} when \(\omega = \tau_y^* \omega\) for all translations \(\tau_y(x) = x +_\phi y\).  We write \(\omega_{\G} \subseteq \Omega^1_{A/R}\) for the subsheaf of such invariant \(1\)--forms.
 \end{definition}
@@ -282,7 +282,7 @@ A formal subscheme \(D\) of a formal scheme \(X = \colim_\alpha X_\alpha\) is sa
 There is a scheme \(\Div_n^+ C\) of effective Weil divisors of rank \(n\).  It is a formal variety of dimension \(n\).  In fact, a coordinate \(x\) on \(C\) determines an isomorphism \(\Div_n^+ C \cong \A^n\) where a divisor \(D\) is associated to a monic polynomial \(f_D(x)\) with nilpotent lower-order coefficients.
 \end{lemma}
 \begin{proof}[Proof sketch]
-To pin down the functor we wish to analyze, we make the definition \[\Div_n^+(C)(u\co \Spec T \to S) = \left\{\text{\(D\) an effective divisor on \(u^* C\) of rank \(n\)}\right\}.\]  To show that this is a formal variety, we pursue the final claim and select a coordinate \(x\) on \(C\), as well as a point \(D \in \Div_n^+(C)(T)\).  The coordinate presents \(u^* C\) as \[u^* C = \Spf T\llbracket x \rrbracket,\] and the characteristic polynomial \(f_D(x)\) of \(x\) in \(\sheaf O_D\) presents \(D\) as the closed subscheme \[D = \Spf T\llbracket x \rrbracket / (f_D(x))\] for \(f_D(x) = x^n + a_{n-1} x^{n-1} + \cdots + a_0\) monic.  Additionally, for any prime ideal \(\p \in T\) we can form the field \(T_{\p} / \p\), over which the module \(\sheaf O_D \otimes_T T_{\p} / \p\) must still be of rank \(n\).  It follows that \[f_D(x) \otimes_T T_{\p} / \p \equiv x^n,\] hence that each \(a_j\) lies in the intersection of all prime ideals of \(T\), hence that each \(a_j\) is nilpotent.
+To pin down the functor we wish to analyze, we make the definition \[\Div_n^+(C)(u\co \Spec T \to S) = \left\{\text{\(D\) an effective divisor on \(u^* C\) of rank \(n\)}\right\}.\]  To show that this is a formal variety, we pursue the final claim and select a coordinate \(x\) on \(C\), as well as a point \(D \in \Div_n^+(C)(T)\).  The coordinate presents \(u^* C\) as \[u^* C = \Spf T\llbracket x \rrbracket,\] and the characteristic polynomial \(f_D(x)\) of \(x\) in \(\sheaf O_D\) presents \(D\) as the closed subscheme \[D = \Spf T\llbracket x \rrbracket / (f_D(x))\] for \(f_D(x) = x^n + a_{n-1} x^{n-1} + \cdots + a_0\) monic.  Additionally, for any prime ideal \(\p \subset T\) we can form the field \(T_{\p} / \p\), over which the module \(\sheaf O_D \otimes_T T_{\p} / \p\) must still be of rank \(n\).  It follows that \[f_D(x) \otimes_T T_{\p} / \p \equiv x^n,\] hence that each \(a_j\) lies in the intersection of all prime ideals of \(T\), hence that each \(a_j\) is nilpotent.
 
 In turn, this means that the polynomial \(f_D\) is selected by a map \(\Spec T \to \A^n\).  Conversely, given such a map, we can form the polynomial \(f_D(x)\) and the divisor \(D\).
 \end{proof}
@@ -393,7 +393,7 @@ In the case of a formal curve \(C\), there is a short exact sequence of formal g
 In this Lecture, we will exploit all of the algebraic geometry previous set up to deduce a load of topological results.
 
 \begin{definition}\label{DefnThomSheaf}
-Let \(E\) be a complex-orientable theory and let \(V \to X\) be a complex vector bundle over a space \(X\).  According to \Cref{ThomIsomOverC}, the cohomology of the Thom spectrum \(E^* T(V)\) forms a \(1\)--dimensional \(E^* X\)--module.  Using \Cref{CorrespondenceQCohAndModules}, we construct a line bundle over \(X_E\) \[\ThomSheaf{V} := \widetilde{E^* T(V)},\] called the \index{Thom sheaf}\textit{Thom sheaf} of \(V\).
+Let \(E\) be a complex-orientable theory and let \(V \to X\) be a complex vector bundle over a space \(X\).  According to \Cref{ThomIsomOverC}, the cohomology of the Thom spectrum \(E^* T(V)\) form a \(1\)--dimensional \(E^* X\)--module.  Using \Cref{CorrespondenceQCohAndModules}, we construct a line bundle over \(X_E\) \[\ThomSheaf{V} := \widetilde{E^* T(V)},\] called the \index{Thom sheaf}\textit{Thom sheaf} of \(V\).
 \end{definition}
 
 \begin{remark}
