add C_p qualifier in 2.4.16

--- a/quillen.tex
+++ b/quillen.tex
@@ -817,7 +817,7 @@ MU^{tC_p} & \simeq \colim_{m \to \infty} \left((MU \sm S^{\C^m})^{hC_p}\right) \
 \end{proof}
 
 \begin{corollary}
-The non-additivity of the power operations associated to \(MU\) is governed by \(t\)--torsion classes. \qed
+The non-additivity of the \(C_p\)--power operations associated to \(MU\) is governed by \(t\)--torsion classes. \qed
 \end{corollary}
 
 \begin{remark}[{\cite[Equations 3.10-11]{Quillen}}]
