single hyphen for "complex-oriented"

--- a/quillen.tex
+++ b/quillen.tex
@@ -23,7 +23,7 @@ E \sm T(\xi) \simeq E \sm \Susp^\infty_+ X. \qedhere
 In particular, for a complex-oriented ring spectrum \(E\) it follows that \(E^* \CP^\infty\) is isomorphic to a one--dimensional power series ring. \qed
 \end{corollary}
 
-We would like to then review the results of \Cref{TheSteenrodAlgebraSection} and conclude (by reinterpreting \Cref{CPinftyNiceCalculation}) that \(\CP^\infty_E\) gives a \(1\)--dimensional formal group over \(\Spec E_*\).  In order to make this statement honestly, however, we are first required to describe more responsibly the algebraic geometry we outlined in \Cref{SectionSchemesOverF2}.  Specifically, the characteristic \(2\) nature of the unoriented bordism ring was a major simplifying feature which made it wholly amenable to study by \(\HFtwo\).  In turn, \(\HFtwo\) has many nice properties---for example, it has a duality between homology and cohomology, and it supports a K\"unneth isomorphism---and these are reflected in the extremely simple algebraic geometry of \(\Spec \F_2\).  By contrast, the complex bordism ring is considerably more complicated, not least because it is a characteristic \(0\) ring, and more generally we have essentially no control over the behavior of the coefficient ring \(E_*\) of some other complex--oriented theory.  Nonetheless, once the background theory and construction of ``\(X_E\)'' are taken care of in \Cref{FormalVarietiesLecture}, we indeed find that \(\CP^\infty_E\) is a \(1\)--dimensional formal group over \(\Spec E_*\).
+We would like to then review the results of \Cref{TheSteenrodAlgebraSection} and conclude (by reinterpreting \Cref{CPinftyNiceCalculation}) that \(\CP^\infty_E\) gives a \(1\)--dimensional formal group over \(\Spec E_*\).  In order to make this statement honestly, however, we are first required to describe more responsibly the algebraic geometry we outlined in \Cref{SectionSchemesOverF2}.  Specifically, the characteristic \(2\) nature of the unoriented bordism ring was a major simplifying feature which made it wholly amenable to study by \(\HFtwo\).  In turn, \(\HFtwo\) has many nice properties---for example, it has a duality between homology and cohomology, and it supports a K\"unneth isomorphism---and these are reflected in the extremely simple algebraic geometry of \(\Spec \F_2\).  By contrast, the complex bordism ring is considerably more complicated, not least because it is a characteristic \(0\) ring, and more generally we have essentially no control over the behavior of the coefficient ring \(E_*\) of some other complex-oriented theory.  Nonetheless, once the background theory and construction of ``\(X_E\)'' are taken care of in \Cref{FormalVarietiesLecture}, we indeed find that \(\CP^\infty_E\) is a \(1\)--dimensional formal group over \(\Spec E_*\).
 
 However, where we could explicitly calculate \(\RP^\infty_{\HFtwo}\) to be \(\G_a\), we again have little control over what formal group \(\CP^\infty_E\) could possibly be.  In the universal case, \(\CP^\infty_{MU}\) comes equipped with a natural coordinate, and this induces a map \[\Spec MU_* \to \moduli{fgl}\] from the spectrum associated to the coefficient ring of complex bordism to the moduli of formal group laws.  The conclusion of this Case Study in \Cref{QuillensTheorem} (modulo an algebraic result, shown in the next Case Study as \Cref{LazardsTheorem}) states that this map is an isomorphism, so that \(\CP^\infty_{MU}\) carries the universal---i.e., maximally complicated---formal group law.  Our route for proving this passes through the foothills of the theory of ``\(p\){\th} power operations'', which simultaneously encode many possible natural transformations from \(MU\)--cohomology to itself glommed together in a large sum, one term of which is the literal \(p\){\th} power.  Remarkably, the identity operation also appears in this family of operations, and the rest of the operations are in some sense controlled by this naturally occuring formal group law.  A careful analysis of this sum begets the inductive proof in \Cref{QuillenSurjective} that \(\sheaf O_{\moduli{fgl}} \to MU_*\) is surjective.
 
@@ -467,7 +467,7 @@ The next major theorems concerning projectivization are the following:
 The sub-bundle of \(\pi^*(V)\) consisting of vectors \((v, (\ell, x))\) such that \(v\) lies along the line \(\ell\) splits off a canonical line bundle. \qed
 \end{corollary}
 
-\begin{corollary}[``Splitting principle'' / ``Complex--oriented descent'']\label{OriginalSplittingPrinciple}\index{splitting principle}
+\begin{corollary}[``Splitting principle'' / ``Complex-oriented descent'']\label{OriginalSplittingPrinciple}\index{splitting principle}
 Associated to any \(n\)--dimensional complex vector bundle \(V\) over a base \(X\), there is a canonical map \(f_V\co Y_V \to X\) such that \((f_V)_E\co (Y_V)_E \to X_E\) is finite and faithfully flat, and there is a canonical splitting into complex line bundles:
 \[\pushQED{\qed}
 f_V^*(V) \cong \bigoplus_{i=1}^n \L_i. \qedhere
@@ -977,7 +977,7 @@ With \Cref{QuillensKeyRelation} in hand, we will now deduce Quillen's major stru
 \begin{itemize}
 \item \(\overline \rho\) is the reduced regular representation of \(C_n\), which coincides with its reduced permutation representation, and \(w = e(\overline \rho)\) is its Euler class.
 \item \(\eta\co BC_n \to BU(1)\) is the line bundle associated to a choice of generating character \(C_n \to U(1)\), and \(t = e(\eta)\) is its Euler class.
-\item \(C\) is the subring of \(MU_*\) generated by the coefficients of the formal group law associated to the identity complex--orientation.
+\item \(C\) is the subring of \(MU_*\) generated by the coefficients of the formal group law associated to the identity complex-orientation.
 \end{itemize}
 In the course of working out the main Theorem, we will want to make use of the following property of the class \(t\).
 
@@ -1030,10 +1030,10 @@ This is the case of \Cref{CGenerationForFiniteCplx} where we set \(X = *\).
 This proof actually also goes through for \(MO\) as well.  In that case, it's even easier, since the equation \(2 = 0\) in \(\pi_0 MO\) causes much of the algebra to collapse.  The proof does not extend further to cases like \(M\SO\) or \(M\mathit{Sp}\): these bordism theories do not have associated formal group laws, and so we lose the control we had in \Cref{StabilizingTheMUSteenrodOps}.
 \end{remark}
 
-Take \(\moduli{fgl}\) to be the moduli functor of formal group laws.  Since a formal group law is a power series satisfying some algebraic identities, this moduli object is an affine scheme with coordinate ring \(\sheaf O_{\moduli{fgl}}\).  A rephrasing of \Cref{QuillenSurjective} is that the natural map \[\sheaf O_{\moduli{fgl}} \to MU_*\] is \emph{surjective}.  This is reason enough to start studying \(\moduli{fgl}\) in earnest, which we take up in the next Case Study---but if we anachronistically assume one algebraic fact about \(\sheaf O_{\moduli{fgl}}\), we can prove that the natural map is an \emph{isomorphism}.  We begin with the following topological observation about mixing complex--orientations:
+Take \(\moduli{fgl}\) to be the moduli functor of formal group laws.  Since a formal group law is a power series satisfying some algebraic identities, this moduli object is an affine scheme with coordinate ring \(\sheaf O_{\moduli{fgl}}\).  A rephrasing of \Cref{QuillenSurjective} is that the natural map \[\sheaf O_{\moduli{fgl}} \to MU_*\] is \emph{surjective}.  This is reason enough to start studying \(\moduli{fgl}\) in earnest, which we take up in the next Case Study---but if we anachronistically assume one algebraic fact about \(\sheaf O_{\moduli{fgl}}\), we can prove that the natural map is an \emph{isomorphism}.  We begin with the following topological observation about mixing complex-orientations:
 
 \begin{lemma}[{\cite[Lemma II.6.3 and Corollary II.6.5]{AdamsBlueBook}}]\label{OrientationsOnEAndMU}
-Let \(\phi\co MU \to E\) be a complex--oriented ring spectrum and consider the two orientations on \(E \sm MU\) given by
+Let \(\phi\co MU \to E\) be a complex-oriented ring spectrum and consider the two orientations on \(E \sm MU\) given by
 \begin{align*}
 \S \sm MU & \xrightarrow{\eta_E \sm 1} E \sm MU, &
 MU \sm \S & \xrightarrow{\phi \sm \eta_{MU}} E \sm MU.
