--- a/sigma.tex
+++ b/sigma.tex
@@ -146,8 +146,8 @@ The \index{Dieudonn\'e module}Dieudonn\'e module of the Cartier dual of a formal
 
 Starting in this Lecture, after our extended interludes on chromatic homotopy theory and cooperations, we return to thinking about bordism orientations directly.  To begin, we will summarize the various perspectives already adopted in \Cref{ComplexBordismChapter} when we were studying complex orientations of ring spectra.
 \begin{enumerate}
-\item (\Cref{DefnComplexOrientation}:) A \index{orientation!complex}complex--orientation of \(E\) is, definitionally, a map \(\MUP \to E\) of ring spectra in the homotopy category.
-\item (\Cref{ComplexOrientationsInTermsOfTrivs}:) A complex--orientation of \(E\) is also equivalent to a multiplicative system of \index{Thom isomorphism}Thom isomorphisms for complex vector bundles.  Such a system is determined by its value on the universal line bundle \(\L\) over \(\CP^\infty\).  We can also phrase this algebro-geometrically: such a Thom isomorphism is the data of a trivialization of the \index{Thom sheaf}Thom sheaf \(\ThomSheaf{\L}\) over \(\CP^\infty_E\).\index{canonical bundle}
+\item (\Cref{DefnComplexOrientation}:) A \index{orientation!complex}complex-orientation of \(E\) is, definitionally, a map \(\MUP \to E\) of ring spectra in the homotopy category.
+\item (\Cref{ComplexOrientationsInTermsOfTrivs}:) A complex-orientation of \(E\) is also equivalent to a multiplicative system of \index{Thom isomorphism}Thom isomorphisms for complex vector bundles.  Such a system is determined by its value on the universal line bundle \(\L\) over \(\CP^\infty\).  We can also phrase this algebro-geometrically: such a Thom isomorphism is the data of a trivialization of the \index{Thom sheaf}Thom sheaf \(\ThomSheaf{\L}\) over \(\CP^\infty_E\).\index{canonical bundle}
 \item (\Cref{OrientationsOnEAndMU}:) Ring spectrum maps \(\MUP \to E\) induce on \(E\)--homology maps \(E_0 \MUP \to E_0\) of \(E_0\)--algebras.  This, too, can be phrased algebro-geometrically: these are elements of \((\Spec E_0 \MUP)(E_0)\).
 \end{enumerate}
 We can summarize our main result about these perspectives as follows:
