--- a/cooperations.tex
+++ b/cooperations.tex
@@ -597,7 +597,7 @@ For any complex-orientable cohomology theory \(E\), the natural approximation ma
 \end{align*}
 \end{corollary}
 \begin{proof}
-The case of \(E = \HFp\) is \Cref{HFpBPCooperationsTheorem}.  Since \(\HFp_* \OS{BP}{2*}\) is even, it follows that \(H\Z_{(p)}{}_* \OS{BP}{2*}\) is torsion--free on a lift of a basis; that \(H\Z_{(p)}{}_* \OS{MU}{2*}\) is also torsion--free on a lift of a basis; and that \(H\Z_* \OS{MU}{2*}\) is as well.  Next, these properties trivialize the Atiyah--Hirzebruch spectral sequence governing \(MU_* \OS{MU}{2*}\), so the theorem holds in this case too.  Finally, using naturality of the Atiyah--Hirzebruch spectral sequence, given a complex--orientation \(MU \to E\) we deduce that the spectral sequence \[E_* \otimes H_*(\OS{MU}{2*}; \Z) \cong E_* \otimes_{MU_*} MU_* \OS{MU}{2*} \Rightarrow E_* \OS{MU}{2*}\] collapses, and similarly for the case of \(BP\).
+The case of \(E = \HFp\) is \Cref{HFpBPCooperationsTheorem}.  Since \(\HFp_* \OS{BP}{2*}\) is even, it follows that \(H\Z_{(p)}{}_* \OS{BP}{2*}\) is torsion--free on a lift of a basis; that \(H\Z_{(p)}{}_* \OS{MU}{2*}\) is also torsion--free on a lift of a basis; and that \(H\Z_* \OS{MU}{2*}\) is as well.  Next, these properties trivialize the Atiyah--Hirzebruch spectral sequence governing \(MU_* \OS{MU}{2*}\), so the theorem holds in this case too.  Finally, using naturality of the Atiyah--Hirzebruch spectral sequence, given a complex-orientation \(MU \to E\) we deduce that the spectral sequence \[E_* \otimes H_*(\OS{MU}{2*}; \Z) \cong E_* \otimes_{MU_*} MU_* \OS{MU}{2*} \Rightarrow E_* \OS{MU}{2*}\] collapses, and similarly for the case of \(BP\).
 \end{proof}
 
 This is an impressively broad claim: the loopspaces \(\OS{MU}{2*}\) are quite complicated, and that any general statement can be made about them is remarkable.  That this fact follows from a calculation in \(\HFp\)--homology and some niceness observations is meant to showcase the density of \(\CP^\infty_H \cong \G_a\) inside of \(\moduli{fg}\).\footnote{Equivalently: the convergence of Postnikov towers.}\footnote{It is worth pointing out that the success of this calculation is misleading as to how difficult unstable calculations can be.  For instance, the Johnson--Yosimura conjecture is that for a space \(X\) and \(x \in BP_n(X)\) a \(BP\)--homology class, \(x\) is \(v_n\)--torsion-free~\cite[pg.\ 37]{Wilson}.  Even related stable conjectures are unsettled: for \(\S^m \to X \to Y\) a cofibration of finite complexes with \(BP_*(X)\) of homological dimension less than \(n\), it is conjectured that the homological dimension of \(BP_*(Y)\) is less than \(n+1\)~\cite[Conjecture 6.8]{JohnsonWilsonProjDim}; and if \(0 \ne y \in BP\<n\>_s(X)\) is a \(v_n\)--torsion-element of a space $X$, it is conjectured that \(s < \dim(X)\)~\cite[Question 6.11]{JohnsonWilsonProjDim}.}
