name the H_infty structure map on pg 86

--- a/quillen.tex
+++ b/quillen.tex
@@ -887,7 +887,7 @@ Having set up an encompassing theory of stable operations, we now seek to give a
 \begin{tikzcd}
 \Susp^\infty_+ BU(1) \arrow["\Delta"]{d} \arrow{r} & \Susp^\infty_+ BU(1) \sm \Susp^\infty_+ BC_n \arrow["\Delta_{hC_n}"]{d} \\
 (\Susp^\infty_+ BU(1))^{\sm n} \arrow{r} \arrow[bend right=15, "\L^{\times n}"' near start]{rr} \arrow["c_1^{\sm n}"]{d} & \Susp^\infty_+ BU(1)^{\sm n}_{hC_n} \arrow["\L(C_n)"]{r} \arrow[crossing over]{d} \arrow["P^{C_n}_{\mathrm{ext}}" near end, crossing over]{rd} & \Susp^\infty_+ BU(n) \arrow["c_n"]{d} \\
-(\Susp^2 MU)^{\sm n} \arrow{r} & (\Susp^2 MU)^{\sm n}_{hC_n} \arrow{r} & \Susp^{2n} MU.
+(\Susp^2 MU)^{\sm n} \arrow{r} & (\Susp^2 MU)^{\sm n}_{hC_n} \arrow["\mu_{n,2}"]{r} & \Susp^{2n} MU.
 \end{tikzcd}
 \end{center}
 The commutativity of the widest rectangle (i.e., the justification for the name ``\(c_n\)'' on the right-most vertical arrow) comes from the Cartan formula for Chern classes: because \(\L^{\oplus n}\) splits as the sum of \(n\) line bundles, \(c_n(\L^{\oplus n})\) is computed as the product of the \(1\)\textsuperscript{st} Chern classes of those line bundles.  Second, the commutativity of the right-most square is not trivial: it is a specific consequence of how the multiplicative structure on \(MU\) arises from the direct sum of vector bundles.\footnote{In general, any notion of first Chern class \(\Susp^\infty_+ BU(1) \to \Susp^2 E\) gives rise to a \emph{noncommuting} diagram of this same shape.  The two composites \(\Susp^\infty_+ BU(1)^{\sm n}_{hC_n} \to \Susp^{2n} E\) need not agree, since \(\L(C_n)\) has no \textit{a priori} reason to be compatible with the factorization appearing in the \(H_\infty^2\)--structure.  They turn out to be loosely related nonetheless, and their exact relation (as well as a procedure for making them agree in certain cases) is the subject of \Cref{PowerOpnsSection}.}  The commutativities of the other two squares comes from the natural transformation from a \(C_n\)--space to its homotopy orbit space.
