--- a/quillen.tex
+++ b/quillen.tex
@@ -909,7 +909,7 @@ P^{C_n}(x) = c_n(\Delta_{hC_n}^* \L(C_n)) & = e\left( \bigoplus_{j=0}^{n-1} \pi_
 \end{align*}
 Here \(x\) is still the \(1\)\textsuperscript{st} Conner--Floyd--Chern class of \(\L\) and \(t\) is the Euler class of \(\eta\).  We now try to make sense of this product expression for \(c_n(\Delta_{hC_n}^* \L(C_n))\) by expanding it in powers of \(x\) and identifying its component pieces.
 \begin{lemma}\label{AjAndBjAreInTheFGLSubring}
-There is a series expansion in \(MU^* BU(1)_{hC_n}\): \[P^{C_n}(x) = \prod_{j=0}^{n-1} (x +_{MU} [j]_{MU}(t)) = w + \sum_{j=1}^\infty a_j(t) x^j,\] where \(a_j(t)\) is a series with coefficients in the subring \(C \subseteq MU_*\) spanned by the coefficients of the natural \(MU\)--formal group law.  The leading term \[w = e(\overline \rho) = \prod_{j=0}^{n-1} e(\eta^{\otimes j}) = \prod_{j=0}^{n-1} [j]_{MU} (e(\eta)) = (n-1)! t^{n-1} + \sum_{j \ge n} b_j t^j\] is the Euler class of the reduced permutation representation, and, again, the elements \(b_j\) lie in the subring \(C\). \qed
+There is a series expansion in \(MU^* BU(1)_{hC_n}\): \[P^{C_n}(x) = \prod_{j=0}^{n-1} (x +_{MU} [j]_{MU}(t)) = w + \sum_{j=1}^\infty a_j(t) x^j,\] where \(+_{MU}\) is the natural formal group law on \(MU_*\), \([j]_{MU}(t)\) is the \(j\)--fold sum of \(t\) with itself using \(+_{MU}\), and \(a_j(t)\) is a series with coefficients in the subring \(C \subseteq MU_*\) spanned by the coefficients of \(+_{MU}\).  The leading term \[w = e(\overline \rho) = \prod_{j=0}^{n-1} e(\eta^{\otimes j}) = \prod_{j=0}^{n-1} [j]_{MU} (e(\eta)) = (n-1)! t^{n-1} + \sum_{j \ge n} b_j t^j\] is the Euler class of the reduced permutation representation, and, again, the elements \(b_j\) lie in the subring \(C\). \qed
 \end{lemma}
 
 We now turn from the \(1\)\textsuperscript{st} universal case to our original goal: understanding the action of \(P^{C_n}\) on each of the canonical classes \[u_m\co MU(m) \to MU.\]  We approach this via the splitting principle by first rewriting the formula in \Cref{AjAndBjAreInTheFGLSubring} in a form amenable to wrangling direct sums with the Cartan formula:
