be consistent about m+q vs q+m

--- a/quillen.tex
+++ b/quillen.tex
@@ -948,7 +948,7 @@ since \(s_\alpha(\iota_{2m}) = 0\) for any nonzero \(\alpha\), as the cohomology
 \end{proof}
 
 \begin{theorem}[{cf.\ \cite[Proposition 3.17]{Quillen}, \cite[Corollary VII.7.14]{Rudyak}}]\label{QuillensKeyRelation}
-Let \(X\) be a finite pointed space and let \(f\) be a cohomology class \[f \in \widetilde{MU}^{2q}(X).\]  For \(m \gg 0\), there is a formula \[w^m P^{C_n}(f) = \sum_{|\alpha| \le m+q} w^{q+m - |\alpha|} a_\alpha(t) s_\alpha(f),\] with \(t\), \(w\), and \(a_\alpha(t)\) as defined above.\footnote{The reader comparing with Quillen's paper will notice various apparent discrepancies between the statements of our Theorem and of his.  These are notational: he grades his cohomology functor homologically, which occasionally causes our \(q\) to match his \(-q\), so that his \(n\) is comparable to our \(m-q\).}
+Let \(X\) be a finite pointed space and let \(f\) be a cohomology class \[f \in \widetilde{MU}^{2q}(X).\]  For \(m \gg 0\), there is a formula \[w^m P^{C_n}(f) = \sum_{|\alpha| \le m+q} w^{m+q - |\alpha|} a_\alpha(t) s_\alpha(f),\] with \(t\), \(w\), and \(a_\alpha(t)\) as defined above.\footnote{The reader comparing with Quillen's paper will notice various apparent discrepancies between the statements of our Theorem and of his.  These are notational: he grades his cohomology functor homologically, which occasionally causes our \(q\) to match his \(-q\), so that his \(n\) is comparable to our \(m-q\).}
 \end{theorem}
 \begin{proof}
 We take \(m\) large enough so that \(f\) is represented by an unstable map \[g\co \Susp^{2m} X \to T_{m+q} BU(m+q),\] in the sense that \(g\) intertwines \(f\) with the universal class \(u_{m+q}\) by the formula \[g^* u_{m+q} = \sigma^{2m} f.\]  We use \Cref{PowerOpnsOnSuspensions} and naturality to conclude
