--- a/cooperations.tex
+++ b/cooperations.tex
@@ -775,7 +775,7 @@ There is a natural isomorphism \[(D_* \G_0)^* \cong D^* \G_0,\] where \(F\) and 
 \end{theorem}
 
 \begin{remark}[{\cite[Theorem 5.1.6]{Katz},~\cite[Chapter 4]{Messing},~\cite[Chapitre VI]{GrothendieckCristaux}}]
-\Cref{ContravariantDieudonneDefn} (and in particular our leap to selecting a lift over \(\W_p(k)\)) is somewhat technically maladroit.  It is more robust to consider each infinitesimal thickening of \(k\) (i.e., the \index{crystal!crystalline site}\textit{crystalline site} over \(k\)) and to assign a ``Dieudonn\'e module'' to each lift of \(\G_0\) over each thickening.  Any such sheaf (called a \textit{Dieudonn\'e crystal}) arise as the base-change of a universal Dieudonn\'e module over the pro-universal base \(\W_p(k)\), which recovers the theory as stated.
+\Cref{ContravariantDieudonneDefn} (and in particular our leap to selecting a lift over \(\W_p(k)\)) is somewhat technically maladroit.  It is more robust to consider each infinitesimal thickening of \(k\) (i.e., the \index{crystal!crystalline site}\textit{crystalline site} over \(k\)) and to assign a ``Dieudonn\'e module'' to each lift of \(\G_0\) over each thickening.  Any such sheaf (called a \textit{Dieudonn\'e crystal}) arises as the base-change of a universal Dieudonn\'e module over the pro-universal base \(\W_p(k)\), which recovers the theory as stated.
 
 However, tracking this intermediate site makes this approach more flexible in the choice of base scheme, thereby granting a notion of ``deformed Dieudonn\'e modules'' and allowing us to recast Lubin--Tate theory in terms of Dieudonn\'e crystals.  The main result in this setting is that there is again a pro-universal base (the Lubin--Tate stack) and a universal sheaf on it (consisting of a Dieudonn\'e module with a connection and choice of Hodge structure) such that each deformed Dieudonn\'e module appears as its restriction.  Various data associated to the Lubin--Tate moduli problem (e.g., the \(\Aut \G_0\) representation) become easier to express in these terms.
 \end{remark}
